[fix] custom t-shirt designer page ant-tour z-index issue fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -287,3 +287,7 @@ textarea {
 .ant-input * {
   font-family: var(--font-uncut-sans);
 }
+
+.ant-tour {
+  z-index: 9999 !important;
+}
